// Copyright 2022 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package org.chromium.chrome.browser.tab.proto;

option java_package = "org.chromium.chrome.browser.tab.proto";

message CouponPersistedTabDataProto {
  // String representing the name of the coupon.
  optional string name = 1;

  // String representing the promotional code related to the coupon.
  optional string code = 2;

  // String representing currency code if monetary amount discount or null
  // if percent off discount.
  optional string currency_code = 3;

  // String representing the numeric monetary amount or percentage being offered
  // in the discount.
  optional int64 discount_units = 4;

  enum DiscountType {
    PERCENT_OFF = 1;
    AMOUNT_OFF = 2;
    UNKNOWN = 3;
  }

  // Type of discount being offered by the coupon.
  optional DiscountType discount_type = 5;
}